Added location api and update checks
