# src/models/Vehicle.js
@@ -1,17 +1,27 @@
-const bikesService = require('../services/BikesService');
+const manageBikesService = require('../services/ManageBikesService');
 class Vehicle {
     async findAvailableBikes(availability) {
-        let result = await bikesService.getAvailableVechile(availability);
+        let result = await manageBikesService.getAvailableVechile(availability);
         return [result];
     }
 
     async findByVehicleType(type) {
-        let result = await bikesService.getBikesByType(type);
+        let result = await manageBikesService.getBikesByType(type);
         return [result];
     }
 
     async findByPricingPlan(pricingPlan) {
-        let result = await bikesService.getBikesByPricingPlan(pricingPlan);
+        let result = await manageBikesService.getBikesByPricingPlan(pricingPlan);
+        return [result];
+    }
+
+    async findStationByName(stationName) {
+        let result = await manageBikesService.getStationDetailByName(stationName);
+        return [result];
+    }
+
+    async findStationStatusByName(stationName) {
+        let result = await manageBikesService.getStationStatusByName(stationName);
         return [result];
     }
 }
