# swagger.json
@@ -52,7 +52,7 @@
               }
             },
             "404": {
-              "description": "Could not find any vehicle at this location"
+              "description": "Could not find any vehicle"
             },
             "500": {
               "description": "Server error"
@@ -80,7 +80,7 @@
               }
             },
             "404": {
-              "description": "Could not find any vehicle at this location"
+              "description": "Could not find any vehicle"
             },
             "500": {
               "description": "Server error"
@@ -118,7 +118,7 @@
               }
             },
             "404": {
-              "description": "Could not find any vehicle at this location"
+              "description": "Could not find any vehicle of this type"
             },
             "500": {
               "description": "Server error"
@@ -134,7 +134,7 @@
           ],
           "summary": "Find vehicle by pricing",
           "description": "Returns a vehicle based on provided pricing",
-          "operationId": "getBikesByPricingPlan",
+          "operationId": "getVehicleByPricingPlan",
           "produces": [
             "application/json"
           ],
@@ -156,7 +156,45 @@
               }
             },
             "404": {
-              "description": "Could not find any vehicle at this location"
+              "description": "Could not find any vehicle with this pricing"
+            },
+            "500": {
+              "description": "Server error"
+            }
+          }
+        }
+      },
+
+      "/vehicles/station/{stationName}": {
+        "get": {
+          "tags": [
+            "vehicle"
+          ],
+          "summary": "Find station information by name",
+          "description": "Returns a station information",
+          "operationId": "getStationDetailByName",
+          "produces": [
+            "application/json"
+          ],
+          "parameters": [
+            {
+              "name": "stationName",
+              "in": "path",
+              "description": "station name",
+              "required": true,
+              "type": "string",
+              "example": "2 ROUES"
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "successful operation",
+              "schema": {
+                "$ref": "#/definitions/GetVehiclesResponse"
+              }
+            },
+            "404": {
+              "description": "Could not find any station"
             },
             "500": {
               "description": "Server error"
@@ -166,43 +204,6 @@
       }
     },
     "definitions": {
-      "RidesRequest": {
-        "type": "object",
-        "properties": {
-          "start_long": {
-            "type": "integer",
-            "format": "int64",
-            "description": "The initial longitude of the ride"
-          },
-          "start_lat": {
-            "type": "integer",
-            "format": "int64",
-            "description": "The initial latitude of the ride"
-          },
-          "end_long": {
-            "type": "integer",
-            "format": "int64",
-            "description": "The final longitude of the ride"
-          },
-          "end_lat": {
-            "type": "integer",
-            "format": "int64",
-            "description": "The final latitude of the ride"
-          },
-          "rider_name": {
-            "type": "string",
-            "description": "The name of the rider"
-          },
-          "driver_name": {
-            "type": "string",
-            "description": "The name of the rider"
-          },
-          "driver_vehicle": {
-            "type": "string",
-            "description": "The name of the rider"
-          }
-        }
-      },
       "VehicleResponse": {
         "type": "object",
         "properties": {
@@ -229,25 +230,6 @@
                       }
                     }
                 }
-            }
-            
-        }
-      },
-      "OrderRequest": {
-        "type": "object",
-        "properties": {
-            "resturant_name": {
-                "type": "string",
-                "required": true,
-                "example": "Ulu Ocean Grill and Sushi Lounge"
-            },
-            "dishes": {
-              "type": "array",
-              "required": true,
-              "example": [
-                "Postum cereal coffee",
-                "DRY LIGHT IMPORTED WINE"
-              ]
             }
             
         }
